--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
+<!doctype html>
 <html>
- <head> 
-  <title>by-SH-6</title> 
+
+  <title>SH-7</title> 
+
   <meta charset="utf-8"> 
+
  </head> 
+
  <body> 
+
   <p style="margin-top:10px;"></p> 
-  <img src="1.jpg" width="65%"> 
+
+  <img src="7.jpg" width="85%">
+   <h5>쌍떡잎식물 진달래목 진달래과</h5>
+  <hr></hr>
+
   <p style="margin-top:30"></p> 
-  <h1><strong>염산홍(Rhododendron indicum)</strong></h1> 
-  <strong> 
-   <newline></newline> <h3>설명</h3> <li>진달래와 비슷한 혼동하기 쉬운 꽃</li> <li>높이:15m~90m</li> <li>쌍떡잎 식물 진달래목 진달래강</li> <li>꽃말:첫사랑</li> </strong> 
+
+<h1>영산홍(<font color="pink">Rhododendron indicum</font>)</h1> 
+
+  <newline></newline> 
+
+  <h3>“바닷가 옆 산기슭에 주로 서식하는 식물”</h3> 
+
+<h4><li><u>높이 15~90cm</u>에 달하는 줄기를 지녔으며 잘 갈라져 잔 가지가 많고 갈색 털이 있는 가지를 지녔고 꽃은 4~5월에 가지 끝에 홍자색으로 피고 지름 3.5~5cm이며 꽃의 밑부분에는 일찍 떨어지는 넓은 비늘조각이 있다.</h4></li> 
+
+  <h4><li>잎이 약간 두껍고 광택이 있으며 가장자리가 밋밋하며 뒷면 맥상과 표면에는 갈색 털이 있고 어긋나지만 가지 끝에서는 모여 달리고 좁은 바소꼴으로 길이 1~3cm, 너비 5~10mm이다. </h4></li> 
+
  </body>
+
 </html>
